--- a/app/src/main/res/layout/activity_nfcwriter.xml
+++ b/app/src/main/res/layout/activity_nfcwriter.xml
@@ -7,26 +7,26 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center"
     tools:context=".MainActivity" >
 
+    <EditText
+        android:id="@+id/mime"
+        android:hint="Mime-type"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="application/Notice ID" />
 
+    <EditText
+        android:id="@+id/value"
+        android:hint="Value"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="loading" />
 
     <Button
-        android:id="@+id/callWriter"
-        android:layout_width="match_parent"
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NFC Writer Module"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:onClick="callWriter"
-        />
-
-    <Button
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:id="@+id/callReader"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="NFC Reader Module"
-        android:onClick="callReader"/>
+        android:text="Start write modus" />
 
 </LinearLayout>
