--- a/app/src/main/res/layout/activity_nfcwriter.xml
+++ b/app/src/main/res/layout/activity_nfcwriter.xml
@@ -62,10 +62,23 @@
 
     <Button
         android:visibility="gone"
+        android:id="@+id/chooseFileBTN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose File"/>
+
+    <Button
+        android:visibility="gone"
         android:id="@+id/uploadFileBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Upload File"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+         />
 
 
     <Button
