UI Fix + Authentication Fix

--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -1,3 +1,8 @@
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_layout"
@@ -5,12 +10,12 @@
     android:layout_height="match_parent"
     android:background="@color/grey_100"
     android:orientation="vertical"
-    android:weightSum="4">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_height="wrap_content"
+
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -23,6 +28,7 @@
             android:src="@drawable/firebase_lockup_400" />
 
         <TextView
+
             android:id="@+id/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,8 +52,8 @@
     <RelativeLayout
         android:id="@+id/bottom"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
+
         android:background="@color/grey_300"
         android:gravity="center_vertical">
 
@@ -103,6 +109,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_marginBottom="40dp"
             android:id="@+id/signed_in_buttons"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -132,11 +139,12 @@
         </LinearLayout>
 
         <Button
+            android:layout_marginBottom="20dp"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginTop="30dp"
             android:visibility="gone"
             android:layout_below="@+id/signed_in_buttons"
             android:id="@+id/start_main"
@@ -151,3 +159,4 @@
 
 
 </LinearLayout>
+</ScrollView>
